--- a/docs/content/developer/getting-started/getting-started.mdx
+++ b/docs/content/developer/getting-started/getting-started.mdx
@@ -31,7 +31,7 @@ to [install IOTA](iota-install.mdx).
 
 If you are already familiar with the basics, you can try the following sections:
 
-- [Your First IOTA dApp](first-app/first-app.mdx): Learn by writing, building, and publishing a simple dApp.
+- [Create a Move Package](create-a-package.mdx): Learn by writing, building, and publishing a simple dApp.
 - [IOTA 101](../iota-101.mdx): Get an overview of
   the [Move concepts](../iota-101/iota-move-concepts/iota-move-concepts.mdx) you'll use as a foundation to
   build [create coins, tokens](../iota-101/create-coin/create-coin.mdx) and [NFTs](../iota-101/create-nft.mdx) using the
