--- a/docs/content/developer/getting-started/connect.mdx
+++ b/docs/content/developer/getting-started/connect.mdx
@@ -8,6 +8,9 @@ import AlphaNet from "../../_snippets/alphanet.mdx";
 
 # Connect to an IOTA Network
 
+You can use the following networks to develop on IOTA. If you are still developing your application, you should use the
+Devnet or Testnet, as these networks provide convenient faucets for test tokens.
+
 ## Alphanet
 
 A temporary network while still in early development, used before public launch of IOTA Rebased. Will be replaced by the Testnet afterwards.
@@ -36,6 +39,8 @@ The IOTA Alphanet, Testnet and Devnet networks consist of four validator nodes o
 
 The fully operational production network, with data persistence and where tokens have real value.
 
+<DataWipe />
+
 :::tip Local Networks
 
 You can also spin up a [local IOTA network](local-network.mdx) for local development.
@@ -51,7 +56,8 @@ IOTA provides [IOTA command line interface (CLI)](/references/cli/client.mdx) to
 - Call and publish Move modules
 
 You can use the [CLI](iota-environment.mdx#iota-cli) or [SDKs](iota-environment.mdx#iota-sdks) to send transactions and
-read requests from using the [JSON-RPC](../../references/iota-api/json-rpc-format.mdx) and the endpoint of choice for the given network.
+read requests from using the [JSON-RPC](../../references/iota-api/json-rpc-format.mdx) and the following
+endpoint: `https://fullnode.<IOTA-NETWORK-VERSION>.iota.io:443`.
 
 <AlphaNet />
 
@@ -130,7 +136,7 @@ Secret Recovery Phrase : [hat become demise beyond history wood stage add nice l
 
 ## Add a Network Environment
 
-If you previously used `iota genesis` with the force option (`-f` or `--force`), your client.yaml file already includes two RPC endpoints: `localnet` at `http://0.0.0.0:9000` and `devnet`. You can view the defined environments with the `iota client envs` command, and switch between them with the `iota client switch` command.
+The [IOTA CLI Client](../../references/cli/client.mdx) allows you to add any number of network environments.
 
 :::tip Check the current Network  ENVs
 
@@ -141,16 +147,14 @@ environment `alias` and URL, as well as indicate the currently active environmen
 iota client envs
 ```
 
-
-:::
-
-<AlphaNet />
-
 The command outputs the available environment aliases, with `(active)` denoting the currently active network.
 ```sh
 localnet => http://0.0.0.0:9000 (active)
 alphanet => https://api.iota-rebased-alphanet.iota.cafe:443
 ```
+:::
+
+<AlphaNet />
 
 You can add a new environment using the `iota client new` command. You should specify and `alias` and `rpc` URL, for
 example:
