fix(devx): apply suggestion from review.

--- a/docs/content/developer/getting-started/create-a-module.mdx
+++ b/docs/content/developer/getting-started/create-a-module.mdx
@@ -5,7 +5,7 @@ tags: [IOTA, Move, module, smart contract, development]
 
 # Create a Move Module
 
-A [package](create-a-package.mdx) by itself doesn't do much; its utility is defined by its modules. A module contains the logic for your package. You can create any number of modules per package. To add a module, create a `.move` file in the `sources` directory. For this guide, create a file called `my_module.move` and add the following content:
+A [package](create-a-package.mdx)'s utility is defined by its modules. A module contains the logic for your package. You can create any number of modules per package. To add a module, create a `.move` file in the `sources` directory. For this guide, create a file called `my_module.move` and add the following content:
 
 :::tip Comments in `.move` files
 
