--- a/docs/content/developer/getting-started/create-a-package.mdx
+++ b/docs/content/developer/getting-started/create-a-package.mdx
@@ -1,19 +1,24 @@
 ---
 description: How to create a Move package in IOTA
-tags: [Move, Package Creation, .toml, manifest]
+tags: [ Move, Package Creation, .toml, manifest ]
 ---
 
 # Create a Move Package
 
-Once you have [installed IOTA](iota-install.mdx), you are ready to create your first IOTA Move [package](../iota-101/iota-move-concepts/packages/packages.mdx). Use the following command to create a standard package:
+Once you have [installed IOTA](iota-install.mdx), you are ready to create your first IOTA
+Move [package](../iota-101/iota-move-concepts/packages/packages.mdx). In IOTA, packages are the way to organize
+the [modules](create-a-module.mdx) that make up your smart contract program. When you publish a package to any IOTA
+network, it will be assigned an address you can use to interact with the package by
+issuing [transactions](../iota-101/transactions/transactions.mdx).
+
+Use the following command to create a standard package:
 
 ```shell
-iota move new <PACKAGE_NAME>
+iota move new my_first_package
 ```
 
-* **Where** `<PACKAGE_NAME>` is the name you want for your package. This guide uses `my_first_package`.
-
-The command will create and populate the `my_first_package` directory with a skeleton for an IOTA Move project, consisting of the following files and directories:
+The command will create and populate the `my_first_package` directory with a skeleton for an IOTA Move project,
+consisting of the following files and directories:
 
 ## `Move.toml`
 
@@ -65,7 +70,8 @@ my_first_package = "0x0"
 
 ### Package
 
-The `[package]` section describes the package. By default, the `iota move new` command populates only the `name` value of the metadata.
+The `[package]` section describes the package. By default, the `iota move new` command populates only the `name` value
+of the metadata.
 
 - `name`: The package name when it is imported.
 - `version`: The package version. It can be used in release management.
@@ -73,9 +79,10 @@ The `[package]` section describes the package. By default, the `iota move new` c
 
 ### Dependencies
 
-The `[dependencies]` section specifies the dependencies of the project. The dependency specification can be a git repository URL or a path to the local directory.
+The `[dependencies]` section specifies the dependencies of the project. The dependency specification can be a git
+repository URL or a path to the local directory.
 
-```toml
+```rust
 # git repository
 iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "framework/testnet" }
 
@@ -83,28 +90,36 @@ iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-f
 MyPackage = { local = "../my-package" }
 ```
 
-Packages also import addresses from other packages. For example, the IOTA dependency adds the `std` and `iota` addresses to the project. These addresses can be used in the code as aliases for the addresses.
+Packages also import addresses from other packages. For example, the IOTA dependency adds the `std` and `iota` addresses
+to the project. These addresses can be used in the code as aliases for the addresses.
 
 ### Resolving Version Conflicts with `override`
 
-If you have two dependencies that use different versions of the same package, you can override the dependency in the `[dependencies]` section. To do so, add the `override` field to the dependency. The version specified in the `[dependencies]` section will be used instead of the one specified in the dependency itself.
+If you have two dependencies that use different versions of the same package, you can override the dependency in
+the `[dependencies]` section. To do so, add the `override` field to the dependency. The version specified in
+the `[dependencies]` section will be used instead of the one specified in the dependency itself.
 
-```toml
+```rust
 [dependencies]
 iota = { override = true, git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "framework/testnet" }
 ```
 
 ### Dev-dependencies
 
-You can also add a `[dev-dependencies]` section to the manifest to override dependencies in the dev and test modes. For example, if you want to use a different version of the IOTA package in dev mode, you can add a custom dependency specification to the `[dev-dependencies]` section.
+You can also add a `[dev-dependencies]` section to the manifest to override dependencies in the dev and test modes. For
+example, if you want to use a different version of the IOTA package in dev mode, you can add a custom dependency
+specification to the `[dev-dependencies]` section.
 
 ### Addresses
 
-The `[addresses]` section is used to add aliases for the addresses you use in your package. You can add any address in this section, and then use its alias in the code instead of the actual address. For example, if you add `alice = "0xA11CE"` to this section, you can use `alice` as `0xA11CE` in the code.
+The `[addresses]` section is used to add aliases for the addresses you use in your package. You can add any address in
+this section, and then use its alias in the code instead of the actual address. For example, if you
+add `alice = "0xA11CE"` to this section, you can use `alice` as `0xA11CE` in the code.
 
 ### Dev-addresses
 
-Much like the `[dev-dependencies]` section, you can also define `[dev-addresses]` to override the addresses you defined in the `[addresses]` section for test and dev modes.
+Much like the `[dev-dependencies]` section, you can also define `[dev-addresses]` to override the addresses you defined
+in the `[addresses]` section for test and dev modes.
 
 :::note Override Only
 You cannot introduce new aliases in this section, only override the ones you defined in [`[addresses]`](#addresses).
@@ -112,13 +127,14 @@ You cannot introduce new aliases in this section, only override the ones you def
 
 ## TOML Styles
 
-The TOML format supports two styles for tables: inline and multiline. The examples above use the inline style, but it is also possible to use the multiline style. You wouldn't want to use it for the `[package]` section, but it can be useful for the dependencies.
+The TOML format supports two styles for tables: inline and multiline. The examples above use the inline style, but it is
+also possible to use the multiline style. You wouldn't want to use it for the `[package]` section, but it can be useful
+for the dependencies.
 
 <Tabs groupId="toml-style">
 <TabItem label="Inline" value="inline">
 
-```toml
-# Inline style
+```move
 [dependencies]
 iota = { override = true, git = "", subdir = "crates/iota-framework/packages/iota-framework", rev = "framework/testnet" }
 MyPackage = { local = "../my-package" }
@@ -126,18 +142,16 @@ MyPackage = { local = "../my-package" }
 
 </TabItem>
 <TabItem label="Multiline" value="multiline">
-```toml
-# Multiline style
+```move
 [dependencies.iota]
 override = true
 git = "https://github.com/iotaledger/iota.git"
 subdir = "crates/iota-framework/packages/iota-framework"
-rev = "framework
-
-/testnet"
+rev = "framework/testnet"
 
 [dependencies.MyPackage]
 local = "../my-package"
+
 ```
 </TabItem>
 </Tabs>
