Review comments fix

--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -7,9 +7,12 @@
   - Demonstrates through examples for each output type the resulting move objects
   - Explains what commands need to be called in a PTB to claim the assets
   - Describes transaction sponsorship from iota addresses for shimmer claiming
+
 ### NFT Output
 
-An address can own `NFTOutput` objects that needs to be unlocked. In this case, some off-chain queries can be used to check the unlock conditions of the `NFTOutput` and asses if it can be unlocked. Check the example above, as it works the same as the [`Basic Output`](#basic-output).
+An address can own `NFTOutput` objects that needs to be unlocked. 
+In this case, some off-chain queries can be used to check the unlock conditions of the `NFTOutput` and asses if it can be unlocked. 
+Check the example above, as it works the same as the [`Basic Output`](#basic-output).
     
 #### Claim of a NFT Output
 Once a NFT Output can be unlocked the claim of its assets can start
@@ -43,7 +46,8 @@ Once a NFT Output can be unlocked the claim of its assets can start
 </TabItem>
 </Tabs>
 
-3. Finally, a PTB can be created using the `nft_output` as input and the `Bag` keys for iterating the native tokens extracted. 
+3. Finally, a PTB can be created using the `nft_output` as input and the `Bag` keys for iterating the native tokens extracted.
+The NFT is different from the `basic output` as it contains the NFT object, the main purpose of claiming is extracting Nft object from the `Nft output`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
