--- a/docs/content/developer/standards/kiosk-apps.mdx
+++ b/docs/content/developer/standards/kiosk-apps.mdx
@@ -12,24 +12,21 @@ There are two types of apps:
 
 ## Basic apps
 
-Basic Kiosk apps do not require Kiosk Apps API to function. They usually serve the purpose of adding custom metadata to a kiosk or wrapping/working with existing objects such as `Kiosk` or `KioskOwnerCap`. An example of an app that does not require the API is the Personal Kiosk app.
+Basic Kiosk apps do not require the Kiosk Apps API to function. They usually serve the purpose of adding custom metadata to a kiosk or wrapping/working with existing objects such as `Kiosk` or `KioskOwnerCap`. An example of an app that does not require the API is the Personal Kiosk app.
 
-### UID access via the uid_mut
+### UID access via `uid_mut`
 
 Kiosk has an `id: UID` field like all objects on IOTA, which allows this object to be uniquely identified and carry custom dynamic fields and dynamic object fields. The Kiosk itself is built around dynamic fields and features like place and list are built around dynamic object fields.
 
-### The uid_mut_as_owner function
+### The `uid_mut_as_owner` function
 
-Kiosk can carry additional dynamic fields and dynamic object fields. The `uid_mut_as_owner` function allows the Kiosk owner to mutably access the UID of the Kiosk object and use it to add or remove custom fields.
+A Kiosk can carry additional dynamic fields and dynamic object fields. The `uid_mut_as_owner` function allows the Kiosk owner to mutably access the `UID` of the Kiosk object and use it to add or remove custom fields.
 
-Function signature:
+Its function signature is: `kiosk::uid_mut_as_owner(self: &mut Kiosk, cap: &KioskOwnerCap): &mut UID`
 
+### The public UID getter
 
-`kiosk::uid_mut_as_owner(self: &mut Kiosk, cap: &KioskOwnerCap): &mut UID`
-
-### The public uid getter
-
-Anyone can read the `uid` of kiosks. This allows third party modules to read the fields of the kiosk if they're allowed to do so. Therefore enabling the object capability and other patterns.
+Anyone can read the `UID` of kiosks. This allows third party modules to read the fields of the kiosk if they're allowed to do so. Therefore enabling the object capability and other patterns.
 
 ### Basic app ideas
 
@@ -42,16 +39,16 @@ module examples::kiosk_name_ext {
     use iota::dynamic_field as df;
     use iota::kiosk::{Self, Kiosk, KioskOwnerCap};
 
-    /// The dynamic field key for the Kiosk Name Extension
+    /// The dynamic field key for the Kiosk Name extension.
     struct KioskName has copy, store, drop {}
 
-    /// Add a name to the Kiosk (in this implementation can be called only once)
+    /// Add a name to the Kiosk (in this implementation it can be called only once).
     public fun add(self: &mut Kiosk, cap: &KioskOwnerCap, name: String) {
         let uid_mut = kiosk::uid_mut_as_owner(self, cap);
         df::add(uid_mut, KioskName {}, name)
     }
 
-    /// Try read the name of the Kiosk - if set - return Some(String), if not - None
+    /// Return `some(String)` as the name of the Kiosk if it's set, otherwise `none`.
     public fun name(self: &Kiosk): Option<String> {
         if (df::exists_(kiosk::uid(self), KioskName {})) {
             option::some(*df::borrow(kiosk::uid(self), KioskName {}))
@@ -109,7 +106,7 @@ module examples::letterbox_ext {
     /// The Witness struct used to identify and authorize the extension.
     struct Extension has drop {}
 
-    /// Install the Mallbox extension into the Kiosk.
+    /// Install the Letterbox extension into the Kiosk.
     public fun add(kiosk: &mut Kiosk, cap: &KioskOwnerCap, ctx: &mut TxContext) {
         kiosk_extension::add(Extension {}, kiosk, cap, PERMISSIONS, ctx)
     }
@@ -148,10 +145,10 @@ module examples::letterbox_ext {
     /// The expected set of permissions for the app. It requires `place`.
     const PERMISSIONS: u128 = 1;
 
-    /// The witness struct used to identify and authorize the app.
+    /// The Witness struct used to identify and authorize the app.
     struct Extension has drop {}
 
-    /// Install the Mallbox app into the kiosk and request `place` permission.
+    /// Install the Letterbox extension into the Kiosk.
     public fun add(kiosk: &mut Kiosk, cap: &KioskOwnerCap, ctx: &mut TxContext) {
         kiosk_extension::add(Extension {}, kiosk, cap, PERMISSIONS, ctx)
     }
