--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -9,10 +9,10 @@
   - Describes transaction sponsorship from iota addresses for shimmer claiming
 
 
-#### Conversion of a NFT Output into a custom NFT
-This topic outlines the process of converting an stardust NFT into a custom NFT.
+#### Conversion of a Nft Output into a custom Nft
+This topic outlines the process of converting an stardust Nft into a custom Nft.
 
-You need to have a prepared custom NFT package that you want to convert the Stardust NFT onto:
+You need to have a prepared custom Nft package that you want to convert the Stardust Nft onto:
 
 <Tabs>
 <TabItem value="move" label="Move">
@@ -27,7 +27,7 @@ You need to have a prepared custom NFT package that you want to convert the Star
 </Tabs>
 
 
-1. Publish a custom NFT package, and retrieve its package ID.
+1. Publish a custom Nft package, and retrieve its package ID.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
@@ -42,7 +42,7 @@ You need to have a prepared custom NFT package that you want to convert the Star
 </Tabs>
 
 
-2. The `NFT output` object is retrieved using its object ID.
+2. The `Nft output` object is retrieved using its object ID.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
@@ -56,7 +56,7 @@ You need to have a prepared custom NFT package that you want to convert the Star
 </TabItem>
 </Tabs>
 
-3. Create a PTB that extracts the stardust NFT from an NFTOutput and then calls the `random_nft::convert` method for converting it into a custom NFT of the collection just published.
+3. Create a PTB that extracts the stardust Nft from an NftOutput and then calls the `random_nft::convert` method for converting it into a custom NFT of the collection just published.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
