--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -56,7 +56,7 @@ TODO
 </Tabs>
 
 
-2. Then we check the native tokens that possibly were held by this output. A `Bag` is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are used as bag index. In the case of the native tokens `Bag` the keys are strings representing the `OTW` used for the native token `Coin`. 
+2. Then we check the native tokens that were possibly held by this output. A `Bag` is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are used as bag index. In the case of the native tokens `Bag` the keys are strings representing the `OTW` used for the native token `Coin`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
@@ -112,7 +112,7 @@ Once a Nft Output can be unlocked the claim of its assets can start
 </Tabs>
 
 
-2. Then we check the native tokens that possibly were held by this output. A `Bag` is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are used as bag index. In the case of the native tokens `Bag` the keys are strings representing the `OTW` used for the native token `Coin`. 
+2. Then we check the native tokens that were possibly held by this output. A `Bag` is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are used as bag index. In the case of the native tokens `Bag` the keys are strings representing the `OTW` used for the native token `Coin`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
