--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -66,7 +66,7 @@ Applying the fitler to get `Nft output` owned by Alias.
 </TabItem>
 </Tabs>
 
-4. Create PTB that unlocks the `Nft output` using funtion - `unlock_alias_address_owned_nft`.
+4. Create PTB that unlocks the `Nft output` using funсtion - `unlock_alias_address_owned_nft`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
