feat(docs/content): add address unlock condition claim

--- a/docs/content/developer/stardust/claiming/claiming.mdx
+++ b/docs/content/developer/stardust/claiming/claiming.mdx
@@ -34,6 +34,9 @@ Go to [Alias Output](alias.mdx).
 
 Go to [Foundry Output](foundry.mdx).
 
+### Output unlockable by an Alias/Nft Address
+
+Go to [Output unlockable by an Alias/Nft Address](address-uc.mdx).
 
 ## Sponsoring your Shimmer claiming
 
