--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -6,8 +6,8 @@ An address can own `NftOutput` objects that needs to be unlocked.
 In this case, some off-chain queries can be used to check the unlock conditions of the `NftOutput` and asses if it can be unlocked. 
 Check the example above, as it works the same as the [`Basic Output`](#basic-output).
     
-## Claim of a Nft Output
-Once a Nft Output can be unlocked the claim of its assets can start
+## Claim of an Nft Output
+Once an Nft Output can be unlocked the claim of its assets can start
 
 1. The first step is to fetch the `NftOutput` object needed to be claimed.
 
@@ -54,7 +54,7 @@ In fact, the main purpose of claiming is extracting the `Nft` object from the `N
 </TabItem>
 </Tabs>
 
-## Conversion of a Nft Output into a custom Nft
+## Conversion of an Nft Output into a custom Nft
 This topic outlines the process of converting an stardust Nft into a custom Nft.
 
 You need to have a prepared custom Nft package that you want to convert the Stardust Nft You need to have a prepared custom Nft package that you want to convert the Stardust Nft into. 
