feat(devx): first edit for about-iota.mdx, iota-security.mdx and transaction-lifecycle.mdx. fix(dex): fix typo in why move

--- a/docs/content/developer/evm-to-move/why-move.mdx
+++ b/docs/content/developer/evm-to-move/why-move.mdx
@@ -12,7 +12,7 @@ While EVM/Solidity is the most famous smart contracts platform, it has some down
 IOTA Move is here to learn from these downsides and come up with a better alternative addressing these issues:
 
 * **Performance, scaling, and cost:** Given that IOTA Move is based on the object model (similar to UTXO's) and not a globally shared state, transactions can be executed in parallel, resulting in a much higher (potential) throughput over a traditional blockchain with shared state. This results in a lot less congestion and, thus, lower fees on an actively used network. 
-* **Security:** Move was designed with security in mind. The language itself is based on Rust and is very strict regarding its typing system. You really have to try to make a microsake that the compiler won't catch before deploying. There's no such thing as re-entry, and given the object-based approach of Move, Assets residing in your account can't be touched at all by the smart contract itself without access to your account keys. 
+* **Security:** Move was designed with security in mind. The language itself is based on Rust and is very strict regarding its typing system. You really have to try to make a mistake that the compiler won't catch before deploying. There's no such thing as re-entry, and given the object-based approach of Move, Assets residing in your account can't be touched at all by the smart contract itself without access to your account keys. 
 * **Tokens:** In IOTA Move, there is no difference between the IOTA token (`Coin<IOTA>`) and a custom token (`Coin<YOUR_NAME_HERE>`), not in terms of use or implementation. These objects reside in your own account and can thus easily be found without needing to know a Smart Contract address (this goes for any other type of owned object as well). There's no strange `approve()` functionality, and you keep control over your own owned assets.
 * **Developer Experience:** While Move is more challenging to get started with compared to Solidity due to its novelty and less mature developer tooling, the safety of the language and the ease of finding and resolving issues in your code make up for that. With Move, it's not so scary anymore to write complex logic from scratch, given most mistakes (apart from obvious implementation logic, doing things 'as intended') are caught directly by the compiler. This allows for more innovation, fewer value-destroying bugs, and a more excellent developer experience, fueling the next generation of smart contracts.
 
