refactor(devx): move images to static folders, and category articles to their corresponding folder

--- a/docs/content/about-iota/iota-architecture/staking-rewards.mdx
+++ b/docs/content/about-iota/iota-architecture/staking-rewards.mdx
@@ -1,5 +1,7 @@
 import StakingPoolReqs from "../../_snippets/staking-pool-reqs.mdx";
 
+# Staking and Rewards
+
 IOTA uses a Delegated Proof-of-Stake (DPoS) system, where [validators](../tokenomics/validators-staking.mdx) get their
 voting power from IOTA token holders who delegate their stakes to them.
 When rewards are distributed at the end of each [epoch](epochs.mdx),
