--- a/docs/content/about-iota/iota-architecture/transaction-lifecycle.mdx
+++ b/docs/content/about-iota/iota-architecture/transaction-lifecycle.mdx
@@ -2,7 +2,7 @@
 
 ## High-level Overview
 
-![Transaction life cycle](./images/txn-lifecycle.png)
+![Transaction life cycle](/img/about-iota/iota-architecture/txn-lifecycle.png)
 
 1. **Create a Transaction**: A user [submits](#submission) a transaction and signs it with a private key. The transaction can affect objects owned by the user, as well as [shared objects](../../developer/iota-101/objects/object-ownership/shared.mdx).
 
