--- a/docs/content/about-iota/tokenomics/proof-of-stake.mdx
+++ b/docs/content/about-iota/tokenomics/proof-of-stake.mdx
@@ -10,7 +10,7 @@ Within each epoch, a fixed set of validators process operations, each with a spe
 
 ## Economic model {#economic-model}
 
-This section covers how the different components of the IOTA economy interact with each other to introduce the IOTA DPoS system. For reference, see the Staking and Tokenomics diagram in the [IOTA Tokenomics](../tokenomics.mdx) overview.
+This section covers how the different components of the IOTA economy interact with each other to introduce the IOTA DPoS system. For reference, see the Staking and Tokenomics diagram in the [IOTA Tokenomics](tokenomics.mdx) overview.
 
 The IOTA economic model works as follows:
 
