--- a/docs/content/about-iota/tokenomics/tokenomics.mdx
+++ b/docs/content/about-iota/tokenomics/tokenomics.mdx
@@ -19,9 +19,9 @@ Three main types of participants characterize the IOTA economy:
 
 The IOTA economy is composed of four core components:
 
-- **[IOTA](./tokenomics/iota-token.mdx):** The IOTA token is the IOTA platform native asset.
-- **[Gas fees](./tokenomics/gas-in-iota.mdx):** Gas fees are charged on all network operations and used to reward participants of the proof-of-stake mechanism and prevent spam and denial-of-service attacks.
-- **[Proof-of-stake](./tokenomics/proof-of-stake.mdx):** The delegated proof-of-stake mechanism is used to select, incentivize, and reward honest behavior by IOTA Validators and the IOTA owners that stake with them.
+- **[IOTA](iota-token.mdx):** The IOTA token is the IOTA platform native asset.
+- **[Gas fees](gas-in-iota.mdx):** Gas fees are charged on all network operations and used to reward participants of the proof-of-stake mechanism and prevent spam and denial-of-service attacks.
+- **[Proof-of-stake](proof-of-stake.mdx):** The delegated proof-of-stake mechanism is used to select, incentivize, and reward honest behavior by IOTA Validators and the IOTA owners that stake with them.
 - **Voting:** On-chain voting is used for governance and protocol upgrades.
 
 
@@ -29,7 +29,7 @@ The IOTA economy is composed of four core components:
 
 The following flowchart presents the tokenomic flow of IOTA at a high level. Referring back to this chart after you learn concepts in this section should provide additional clarity.
 
-![IOTA tokenomics flow](./images/iota-tokenomics-flow.png "Flowchart showing the tokenomics structure.")
+![IOTA tokenomics flow](/img/about-iota/tokenomics/iota-tokenomics-flow.png "Flowchart showing the tokenomics structure.")
 
 ## Tokenomics whitepaper
 
