--- a/docs/content/developer/standards/coin.mdx
+++ b/docs/content/developer/standards/coin.mdx
@@ -6,7 +6,7 @@ sidebar_label: Coin
 
 The Coin standard is the technical standard used for smart contracts on IOTA for creating coins on the IOTA blockchain. The standardization of coin creation on IOTA means that wallets, exchanges, and other smart contracts can manage coins created on IOTA the same as they manage IOTA, without any additional processing logic. 
 
-See [IOTA Tokenomics](../../about-iota/tokenomics.mdx) to learn more about the IOTA native coin and its use on the IOTA network.
+See [IOTA Tokenomics](../../about-iota/tokenomics/tokenomics.mdx) to learn more about the IOTA native coin and its use on the IOTA network.
 
 Although coins on IOTA follow the Coin standard, they can offer specialized abilities. For example, you can create a regulated token that allows its creator to add specific addresses to a deny list, so that the identified addresses cannot use the token as inputs to transactions.
 
@@ -268,4 +268,4 @@ Check out the following content for more information about coins and tokens on I
 - [Closed-Loop Token Standard](closed-loop-token.mdx): Details the Token standard on IOTA.
 - [`coin` module rustdoc documentation](https://github.com/iotaledger/iota/blob/main/crates/iota-framework/docs/iota-framework/coin.md): Automated documentation output for the IOTA framework `coin` module.
 - [`token` module rustdoc documentation](https://github.com/iotaledger/iota/blob/main/crates/iota-framework/docs/iota-framework/token.md): Automated documentation output for the IOTA framework `token` module.
-- [Tokenomics](../../about-iota/tokenomics.mdx): Discover the IOTA ecosystem and where IOTA coins fit within it.
+- [Tokenomics](../../about-iota/tokenomics/tokenomics.mdx): Discover the IOTA ecosystem and where IOTA coins fit within it.
