chore(docs): fix doc tree for claiming

--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -16,30 +16,30 @@
 
 ## Examples of Stardust asset claim transactions
 
-In the following, some examples of transactions for claiming the Stardust assets will be presented. Different commands in a [PTB](../../iota-101/transactions/ptb/prog-txn-blocks.mdx) are used depending on the claiming scenario, that varies depending on the Stardust Output type and composition.
+In the following, some examples of transactions for claiming the Stardust assets will be presented. Different commands in a [PTB](../iota-101/transactions/ptb/prog-txn-blocks.mdx) are used depending on the claiming scenario, that varies depending on the Stardust Output type and composition.
 
 ### Basic Output
 
-Go to [Basic Output](basic.mdx).
+Go to [Basic Output](claiming/basic.mdx).
 
 ### Nft Output
 
-Go to [Nft Output](nft.mdx).
+Go to [Nft Output](claiming/nft.mdx).
 
 ### Alias Output
 
-Go to [Alias Output](alias.mdx).
+Go to [Alias Output](claiming/alias.mdx).
 
 ### Foundry Output
 
-Go to [Foundry Output](foundry.mdx).
+Go to [Foundry Output](claiming/foundry.mdx).
 
 ### Output unlockable by an Alias/Nft Address
 
-Go to [Output unlockable by an Alias/Nft Address](address-uc.mdx).
+Go to [Output unlockable by an Alias/Nft Address](claiming/address-uc.mdx).
 
 ## Sponsoring your Shimmer claiming
 
 In the case in which some assets are owned by a Shimmer address that helds no IOTA tokens (needed to pay for gas), then a claiming can benefit by the process of self-sponsoring. This means that an address owning IOTA tokens can be used by the same user to sponsor a transaction claiming Shimmer assets. 
 
-Go to [Self-sponsor Shimmer Claimings](self-sponsor.mdx).
+Go to [Self-sponsor Shimmer Claimings](claiming/self-sponsor.mdx).
