--- a/docs/content/developer/stardust/stardust-migration.mdx
+++ b/docs/content/developer/stardust/stardust-migration.mdx
@@ -67,7 +67,7 @@ find their assets on the IOTA Rebased network. Should it be necessary based on t
 that talks to the browser extension wallet helps users to claim their assets.
 
 Developers can use the official SDKs and APIs to claim assets programmatically based on the information provided on the
-following pages. Example transactions on how to claim are described in the [Claiming Stardust Assets](./claiming/claiming.mdx) guide.
+following pages. Example transactions on how to claim are described in the [Claiming Stardust Assets](./claiming.mdx) guide.
 
 ## What Tools Can I Use?
 
