--- a/docs/content/developer/stardust/move-models.mdx
+++ b/docs/content/developer/stardust/move-models.mdx
@@ -346,7 +346,7 @@ There are two ways to interact with `BasicOutputs` in move:
   public fun extract_assets<T>(output: BasicOutput<T>, ctx: &mut TxContext) : (Balance<T>, Bag) { ... }
   ```
   that shows that a base token balance and a `Bag` is returned. It is then the job of the caller to create coins out
-  of the base token balance and from the native token balances extracted from the `Bag`. The [Claiming Stardust Assets](./claiming/claiming.mdx)
+  of the base token balance and from the native token balances extracted from the `Bag`. The [Claiming Stardust Assets](./claiming.mdx)
   guide explains in detail what is the recommended way to deal with these results.
 
 2. Receive them on an `ObjectID` address. The [Receiving Objects](../iota-101/objects/transfers/transfer-to-object.mdx#receiving-objects)
