--- a/docs/content/developer/standards/kiosk.mdx
+++ b/docs/content/developer/standards/kiosk.mdx
@@ -128,6 +128,8 @@ Kiosk is designed to be shared. If you choose a different storage model, such as
 
 ```javascript
 let tx = new TransactionBlock();
+let sender = "0x...";
+
 let [kiosk, kioskOwnerCap] = tx.moveCall({
     target: '0x2::kiosk::new'
 });
@@ -136,7 +138,7 @@ tx.transferObjects([ kioskOwnerCap ], sender);
 tx.moveCall({
     target: '0x2::transfer::public_share_object',
     arguments: [ kiosk ],
-    typeArguments: '0x2::kiosk::Kiosk'
+    typeArguments: ['0x2::kiosk::Kiosk']
 })
 ```
 
