--- a/docs/content/developer/stardust/claiming/address-uc.mdx
+++ b/docs/content/developer/stardust/claiming/address-uc.mdx
@@ -2,6 +2,8 @@
  title: Claiming an Output unlockable by an Alias/Nft Address
 ---
 
+## Claim of an Output owned by another Alias/Nft Output
+
 ### Address unlock condition
 
 For this example, we're using `Alias output` as it has an `Alias object` that owns `Nft output`.
