fix(docs): spelling issues

--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -3,7 +3,7 @@
 ---
 
 An address can own `AliasOutput` objects that need to be unlocked. 
-In this case, some off-chain queries can be used to check the unlock conditions of the `AliasOutput` and asses if it can be unlocked. 
+In this case, some off-chain queries can be used to check the unlock conditions of the `AliasOutput` and assess if it can be unlocked. 
 Check the [`NftOutput`](nft.mdx) example, as it works the same way.
 
 ## Claim of an Alias Output
