--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -3,7 +3,7 @@
 ---
 
 An address can own `NftOutput` objects that needs to be unlocked. 
-In this case, some off-chain queries can be used to check the unlock conditions of the `NftOutput` and asses if it can be unlocked. 
+In this case, some off-chain queries can be used to check the unlock conditions of the `NftOutput` and assess if it can be unlocked. 
 Check the example above, as it works the same as the [`Basic Output`](basic.mdx).
     
 ## Claim of an Nft Output
